; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfileconfig_file.c_config_get_char.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfileconfig_file.c_config_get_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_entry_list = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @config_get_char(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.config_entry_list*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call %struct.config_entry_list* @config_get_entry(i32* %9, i8* %10, i32* null)
  store %struct.config_entry_list* %11, %struct.config_entry_list** %8, align 8
  %12 = load %struct.config_entry_list*, %struct.config_entry_list** %8, align 8
  %13 = icmp ne %struct.config_entry_list* %12, null
  br i1 %13, label %14, label %37

14:                                               ; preds = %3
  %15 = load %struct.config_entry_list*, %struct.config_entry_list** %8, align 8
  %16 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 0
  %19 = load i8, i8* %18, align 1
  %20 = sext i8 %19 to i32
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %31

22:                                               ; preds = %14
  %23 = load %struct.config_entry_list*, %struct.config_entry_list** %8, align 8
  %24 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %23, i32 0, i32 0
  %25 = load i8*, i8** %24, align 8
  %26 = getelementptr inbounds i8, i8* %25, i64 1
  %27 = load i8, i8* %26, align 1
  %28 = sext i8 %27 to i32
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %22
  store i32 0, i32* %4, align 4
  br label %38

31:                                               ; preds = %22, %14
  %32 = load %struct.config_entry_list*, %struct.config_entry_list** %8, align 8
  %33 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %32, i32 0, i32 0
  %34 = load i8*, i8** %33, align 8
  %35 = load i8, i8* %34, align 1
  %36 = load i8*, i8** %7, align 8
  store i8 %35, i8* %36, align 1
  store i32 1, i32* %4, align 4
  br label %38

37:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %38

38:                                               ; preds = %37, %31, %30
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local %struct.config_entry_list* @config_get_entry(i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
